Fix a bug with top-menu z-index

--- a/client/src/static/topMenu.scss
+++ b/client/src/static/topMenu.scss
@@ -5,6 +5,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 10;
   
   
     
